@@ -1,3 +1,5 @@
+#!perl
+
 use strict;
 use warnings;
 use Test::More;
@@ -8,7 +10,7 @@ plan tests    => 6;
 use_ok('UFL::Phonebook::Model::Unit');
 
 my %config = (
-    host        => 'misc02.osg.ufl.edu',
+    host        => $ENV{TEST_LDAP_HOST} || 'ldap.ufl.edu',
     base        => 'ou=Organizations,dc=ufl,dc=edu',
     entry_class => 'UFL::Phonebook::Unit',
 );
